First pass at /compatibility/check endpoint for new biosim webapp
