# biosim_server/compatibility/__init__.py
@@ -1,0 +1,21 @@
+from biosim_server.compatibility.models import (
+    ModelFormat,
+    SimulationRequirement,
+    OmexContent,
+    CompatibleSimulator,
+    CompatibilityResponse,
+)
+from biosim_server.compatibility.omex_parser import parse_omex_content
+from biosim_server.compatibility.simulator_matcher import find_compatible_simulators
+from biosim_server.compatibility.router import router as compatibility_router
+
+__all__ = [
+    "ModelFormat",
+    "SimulationRequirement",
+    "OmexContent",
+    "CompatibleSimulator",
+    "CompatibilityResponse",
+    "parse_omex_content",
+    "find_compatible_simulators",
+    "compatibility_router",
+]
